--- a/CleanBlog.Web/Views/Master.cshtml
+++ b/CleanBlog.Web/Views/Master.cshtml
@@ -6,6 +6,7 @@
 	Layout = null;
 
 	Html.RequiresCss("https://use.fontawesome.com/releases/v6.3.0/js/all.js");
+	Html.RequiresCss("/vendor/fontawesome-free/css/all.min.css");
 	Html.RequiresCss("https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic");
 	Html.RequiresCss("https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800");
 	Html.RequiresCss("/assets/favicon.ico");
@@ -28,11 +29,11 @@
 	@Html.RenderCssHere()
 </head>
 <body>
-    @Html.Partial("~/Views/Partials/Navigation.cshtml")
+	@Html.Partial("~/Views/Partials/Navigation.cshtml")
 
-    @RenderBody()
+	@RenderBody()
 
-    @Html.Partial("~/Views/Partials/Footer.cshtml")
+	@Html.Partial("~/Views/Partials/Footer.cshtml")
 
 
 	@Html.RenderJsHere()
