--- a/CleanBlog.Web/Views/Partials/PageHeader.cshtml
+++ b/CleanBlog.Web/Views/Partials/PageHeader.cshtml
@@ -13,8 +13,10 @@
         imageUrl = image.GetCropUrl("PageHeader.Large");
     }
 
-    var authorName = Model.HasProperty("authorName") && Model.HasValue("authorName") ? Model.Value<string>("authorName") : "";
-    DateTime articleDate = Model.HasProperty("articleDate") && Model.HasValue("articleDate") ? Model.Value<DateTime>("articleDate") : DateTime.MinValue;
+    var authorName = Model.HasProperty("authorName") && Model.HasValue("authorName") 
+            ? Model.Value<string>("authorName") : "";
+    DateTime articleDate = Model.HasProperty("articleDate") && Model.HasValue("articleDate") 
+            ? Model.Value<DateTime>("articleDate") : DateTime.MinValue;
 
     bool hasAuthorDetails = !string.IsNullOrWhiteSpace(authorName) || articleDate != DateTime.MinValue;
 }
