--- a/CleanBlog.Web/Views/Error.cshtml
+++ b/CleanBlog.Web/Views/Error.cshtml
@@ -1,21 +1,16 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<Umbraco.Web.PublishedModels.Error>
 
-    @*@using Umbraco.Web.PublishedModels*@
-    @{
+@*@using Umbraco.Web.PublishedModels*@
+@using CleanBlog.Core.Extensions
+
+@{
     Layout = "Master.cshtml";
-    }
+}
 
-    @Html.Partial("~/Views/Partials/PageHeader.cshtml")
-    <!-- Post Content-->
+@Html.Partial("~/Views/Partials/PageHeader.cshtml")
+<!-- Post Content-->
+<article>
+    @Html.GetGridHtml(Model, "mainContent", "Clean", true)
 
-    
-    <article class="mb-4">
-        <div class="container px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Page Not Found</p>
-                </div>
-            </div>
-        </div>
-    </article>
+</article>
 
