--- a/CleanBlog.Web/Views/Master.cshtml
+++ b/CleanBlog.Web/Views/Master.cshtml
@@ -1,41 +1,43 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
 
 @using ClientDependency.Core.Mvc
+@using Our.Umbraco.EditLink
 
 @{
-	Layout = null;
+    Layout = null;
 
-	Html.RequiresCss("https://use.fontawesome.com/releases/v6.3.0/js/all.js");
-	Html.RequiresCss("/vendor/fontawesome-free/css/all.min.css");
-	Html.RequiresCss("https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic");
-	Html.RequiresCss("https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800");
-	Html.RequiresCss("/assets/favicon.ico");
-	Html.RequiresCss("/css/styles.css");
+    Html.RequiresCss("https://use.fontawesome.com/releases/v6.3.0/js/all.js");
+    Html.RequiresCss("/vendor/fontawesome-free/css/all.min.css");
+    Html.RequiresCss("https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic");
+    Html.RequiresCss("https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800");
+    Html.RequiresCss("/assets/favicon.ico");
+    Html.RequiresCss("/css/styles.css");
 
-	Html.RequiresJs("/cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js");
-	Html.RequiresJs("https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js");
-	Html.RequiresJs("/js/scripts.js");
+    Html.RequiresJs("/cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js");
+    Html.RequiresJs("https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js");
+    Html.RequiresJs("/js/scripts.js");
 }
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-	<meta name="description" content="" />
-	<meta name="author" content="" />
-	<title>Clean Blog - Start Bootstrap Theme</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Clean Blog - Start Bootstrap Theme</title>
 
-	@Html.RenderCssHere()
+    @Html.RenderCssHere()
 </head>
 <body>
-	@Html.Partial("~/Views/Partials/Navigation.cshtml")
+    @Html.RenderEditLink(Model)
+    @Html.Partial("~/Views/Partials/Navigation.cshtml")
 
-	@RenderBody()
+    @RenderBody()
 
-	@Html.Partial("~/Views/Partials/Footer.cshtml")
+    @Html.Partial("~/Views/Partials/Footer.cshtml")
 
 
-	@Html.RenderJsHere()
+    @Html.RenderJsHere()
 </body>
 </html>
