--- a/CleanBlog.Web/Views/Master.cshtml
+++ b/CleanBlog.Web/Views/Master.cshtml
@@ -16,6 +16,7 @@
     Html.RequiresJs("/cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js");
     Html.RequiresJs("https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js");
     Html.RequiresJs("/js/scripts.js");
+    Html.RequiresJs("/scripts/pleasedontgo.js");
 }
 
 <!DOCTYPE html>
