--- a/CleanBlog.Web/Views/Home.cshtml
+++ b/CleanBlog.Web/Views/Home.cshtml
@@ -8,3 +8,5 @@
 @Html.Partial("~/Views/Partials/PageHeader.cshtml");
 
 @Html.Partial("~/Views/Partials/LatestArticles.cshtml");
+
+@*@Html.CashedPartial("~/Views/Partials/LatestArticles.cshtml", Model, 3600, true);*@
