--- a/CleanBlog.Web/Views/Partials/PageHeader.cshtml
+++ b/CleanBlog.Web/Views/Partials/PageHeader.cshtml
@@ -9,14 +9,14 @@
     string imageUrl = "";
     if (image != null)
     {
-        @*smallImageUrl = image.GetCropUrl("PageHeader.Tiny");
-        imageUrl = image.GetCropUrl("PageHeader.Large");*@
-        imageUrl = image.GetCropUrl(1903,532);
+        smallImageUrl = image.GetCropUrl("PageHeader.Tiny");
+        imageUrl = image.GetCropUrl("PageHeader.Large");
+        //imageUrl = image.GetCropUrl(1903,532);
     }
 
-    var authorName = Model.HasProperty("authorName") && Model.HasValue("authorName") 
+    var authorName = Model.HasProperty("authorName") && Model.HasValue("authorName")
             ? Model.Value<string>("authorName") : "";
-    DateTime articleDate = Model.HasProperty("articleDate") && Model.HasValue("articleDate") 
+    DateTime articleDate = Model.HasProperty("articleDate") && Model.HasValue("articleDate")
             ? Model.Value<DateTime>("articleDate") : DateTime.MinValue;
 
     bool hasAuthorDetails = !string.IsNullOrWhiteSpace(authorName) || articleDate != DateTime.MinValue;
