--- a/CleanBlog.Web/Views/Partials/PageHeader.cshtml
+++ b/CleanBlog.Web/Views/Partials/PageHeader.cshtml
@@ -23,7 +23,8 @@
 }
 
 <!-- Page Header -->
-<header class="masthead lazyload" data-bg="@(!string.IsNullOrWhiteSpace(imageUrl) ? imageUrl : null)" style="@(!string.IsNullOrWhiteSpace(smallImageUrl) ? "background-image: url('" + smallImageUrl +"')" : null)">
+<header class="masthead lazyload" data-bg="@(!string.IsNullOrWhiteSpace(imageUrl) ? imageUrl : null)" 
+        style="@(!string.IsNullOrWhiteSpace(smallImageUrl) ? "background-image: url('" + smallImageUrl +"')" : null)">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
